--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,21 +43,21 @@ services:
 #    networks:
 #      - jenkins_network
 
-#  app:
-#    image: aptio-app
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    ports:
-#      - "8080:8080"
-#    environment:
-#      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/aptio_db
-#      - SPRING_DATASOURCE_USERNAME=admin
-#      - SPRING_DATASOURCE_PASSWORD=admin
-#    depends_on:
-#      - db
-#    networks:
-#      - jenkins_network
+  app:
+   image: aptio-app
+   build:
+     context: .
+     dockerfile: Dockerfile
+   ports:
+     - "8080:8080"
+   environment:
+     - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/aptio_db
+     - SPRING_DATASOURCE_USERNAME=admin
+     - SPRING_DATASOURCE_PASSWORD=admin
+   depends_on:
+     - db
+   networks:
+     - jenkins_network
 
 networks:
   jenkins_network:
