--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,19 @@
-version: "3.8"
+version: '3.8'
 
-name: aptio
 services:
-
-  db:
+  postgres:
     image: postgres:latest
+    container_name: aptio-db
     restart: always
     environment:
-      - POSTGRES_DB=aptio_db
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
+      POSTGRES_DB: aptiodb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
-    networks:
-      - jenkins_network
-
-#  sonar-postgres:
-#    image: postgres:15
-#    container_name: sonar-postgres
-#    restart: always
-#    environment:
-#      - POSTGRES_USER=sonar
-#      - POSTGRES_PASSWORD=sonar
-#      - POSTGRES_DB=sonarqube
-#    ports:
-#      - "5433:5433"
-#    networks:
-#      - jenkins_network
-#
-#  sonarqube:
-#    image: sonarqube:latest
-#    container_name: sonarqube
-#    restart: always
-#    depends_on:
-#      - sonar-postgres
-#    environment:
-#      - SONAR_JDBC_URL=jdbc:postgresql://sonar-postgres:5432/sonarqube
-#      - SONAR_JDBC_USERNAME=sonar
-#      - SONAR_JDBC_PASSWORD=sonar
-#    ports:
-#      - "9000:9000"
-#    networks:
-#      - jenkins_network
-
-  app:
-   image: aptio-app
-   build:
-     context: .
-     dockerfile: Dockerfile
-   ports:
-     - "8080:8080"
-   environment:
-     - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/aptio_db
-     - SPRING_DATASOURCE_USERNAME=admin
-     - SPRING_DATASOURCE_PASSWORD=admin
-   depends_on:
-     - db
-   networks:
-     - jenkins_network
-
-networks:
-  jenkins_network:
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
-  jenkins_home:
+  postgres_data:
+    driver: local
